force-app/main/default/objects/Contact/fields/Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Date__c</fullName>
    <label>Account Created Date</label>
    <type>Date</type>
    <description>Date the player's Sony/PlayStation Network account was originally created. Distinct from Salesforce record CreatedDate.</description>
</CustomField>