force-app/main/default/objects/Contact/fields/Controller_Health_Message__c.field-meta.xml
<CustomField>
    <fullName>Controller_Health_Message__c</fullName>
    <label>Controller Health Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>