force-app/main/default/objects/Contact/fields/Controller_Health_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Controller_Health_Recommendation__c</fullName>
    <label>Controller Health Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Free Replacement Review</fullName><default>false</default><label>Free Replacement Review</label></value>
            <value><fullName>Discounted Replacement Review</fullName><default>false</default><label>Discounted Replacement Review</label></value>
            <value><fullName>Repair Review</fullName><default>false</default><label>Repair Review</label></value>
            <value><fullName>Stick Module Review</fullName><default>false</default><label>Stick Module Review</label></value>
            <value><fullName>Troubleshooting</fullName><default>false</default><label>Troubleshooting</label></value>
            <value><fullName>No Action</fullName><default>false</default><label>No Action</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>