force-app/main/default/objects/Contact/fields/Controller_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Controller_Health_Status__c</fullName>
    <label>Controller Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Healthy</fullName><default>false</default><label>Healthy</label></value>
            <value><fullName>Watch</fullName><default>false</default><label>Watch</label></value>
            <value><fullName>Needs Attention</fullName><default>false</default><label>Needs Attention</label></value>
            <value><fullName>Review Recommended</fullName><default>false</default><label>Review Recommended</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>