force-app/main/default/objects/Contact/fields/Favorite_Game__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Game__c</fullName>
    <label>Favorite Game</label>
    <length>120</length>
    <type>Text</type>
</CustomField>