force-app/main/default/objects/Contact/fields/Last_PSN_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_PSN_Login__c</fullName>
    <label>Last PSN Login</label>
    <type>DateTime</type>
</CustomField>