force-app/main/default/objects/Contact/fields/Player_ID__c.field-meta.xml
<CustomField>
    <fullName>Player_ID__c</fullName>
    <externalId>true</externalId>
    <label>Player ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
    <description>External player identifier used for data upsert from CSV and cross-system identity resolution. Values: PLAYER001, PLAYER002, PLAYER003, PLAYER004. Distinct from Player_Owner_ID__c which is a legacy free-text field.</description>
</CustomField>