force-app/main/default/objects/Contact/fields/Player_Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Player_Lifetime_Value__c</fullName>
    <label>Player Lifetime Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>