force-app/main/default/objects/Contact/fields/Player_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Player_Owner_ID__c</fullName>
    <label>Player Owner ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>