force-app/main/default/objects/Contact/fields/PlayStation_Loyalty_Tier__c.field-meta.xml
<CustomField>
    <fullName>PlayStation_Loyalty_Tier__c</fullName>
    <label>PlayStation Loyalty Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Bronze</fullName><default>false</default><label>Bronze</label></value>
            <value><fullName>Silver</fullName><default>false</default><label>Silver</label></value>
            <value><fullName>Gold</fullName><default>false</default><label>Gold</label></value>
            <value><fullName>Platinum</fullName><default>false</default><label>Platinum</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>