force-app/main/default/objects/Contact/fields/Preferred_PlayStation_Channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_PlayStation_Channel__c</fullName>
    <label>Preferred PlayStation Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Console</fullName><default>false</default><label>Console</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Mobile Push</fullName><default>false</default><label>Mobile Push</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>