force-app/main/default/objects/Contact/fields/Primary_Console__c.field-meta.xml
<CustomField>
    <fullName>Primary_Console__c</fullName>
    <label>Primary Console</label>
    <length>80</length>
    <type>Text</type>
</CustomField>