force-app/main/default/objects/Contact/fields/PS_Plus_Tier__c.field-meta.xml
<CustomField>
    <fullName>PS_Plus_Tier__c</fullName>
    <label>PS Plus Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Essential</fullName><default>false</default><label>Essential</label></value>
            <value><fullName>Extra</fullName><default>false</default><label>Extra</label></value>
            <value><fullName>Premium</fullName><default>false</default><label>Premium</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>