force-app/main/default/objects/Contact/fields/PSN_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>PSN_Account_ID__c</fullName>
    <label>PSN Account ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>