force-app/main/default/objects/Contact/fields/Recent_Play_Hours_30d__c.field-meta.xml
<CustomField>
    <fullName>Recent_Play_Hours_30d__c</fullName>
    <label>Recent Play Hours 30d</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>